--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -56,7 +56,7 @@
 
 @layer components {
   .content-container {
-    @apply max-w-[1440px] w-full mx-auto lg:px-12 xl:px-16 md:px-8 px-4;
+    @apply md:max-w-[1920px] max-w-[1440px] w-full mx-auto lg:px-12 xl:px-16 md:px-8 px-4;
   }
 
   .text-xxs-normal {
