refactor: use css variables for configuration in tailwind config

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,8 +1,108 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  :root {
+    --background: hsl(0, 0%, 100%);
+    --foreground: hsl(222.2, 84%, 4.9%);
+
+    --neutral: hsl(0, 0%, 94.51%);
+    --neutral-foreground: hsl(222.2, 84%, 4.9%);
+
+    --card: hsl(0, 0%, 100%);
+    --card-foreground: hsl(222.2, 84%, 4.9%);
+
+    --popover: hsl(0, 0%, 100%);
+    --popover-foreground: hsl(222.2, 84%, 4.9%);
+
+    --primary: hsl(174.88, 100%, 16.08%);
+    --primary-foreground: hsl(55, 28%, 92%);
+
+    --secondary: hsl(0, 0%, 0%);
+    --secondary-foreground: hsl(54, 20%, 80%);
+
+    --muted: hsl(210, 40%, 96.1%);
+    --muted-foreground: hsl(215.4, 16.3%, 46.9%);
+
+    --accent: hsl(325, 17.65%, 40%);
+    --accent-foreground: hsl(325, 17.65%, 40%);
+
+    --destructive: hsl(0, 84.2%, 60.2%);
+    --destructive-foreground: hsl(210, 40%, 98%);
+
+    --border: hsl(214.3, 31.8%, 91.4%);
+
+    --input: hsl(0, 0%, 95%);
+    --input-placeholder: hsl(0, 0%, 50%);
+    --input-foreground: hsl(0, 0%, 15%);
+
+    --ring: hsl(222.2, 84%, 4.9%);
+
+    --radius: 0.5rem;
+
+    --flex-carousel-full: 0 0 100%;
+    --flex-carousel-half: 0 0 50%;
+    --flex-carousel-sm: 0 0 calc(100%/3);
+    --flex-carousel-lg: 0 0 calc(100%/5);
+    --flex-carousel-xl: 0 0 calc(100%/6);
+
+    --price-default: hsl(80, 4.62%, 12.75%);
+    --price-sale: hsl(347, 62%, 53%);
+  }
+
+  .dark {
+    --background: hsl(0, 0%, 100%);
+    --foreground: hsl(0, 0%, 0%);
+
+    --neutral: hsl(0, 0%, 94.51%);
+    --neutral-foreground: hsl(222.2, 84%, 4.9%);
+
+    --card: hsl(0, 0%, 100%);
+    --card-foreground: hsl(222.2, 84%, 4.9%);
+
+    --popover: hsl(0, 0%, 100%);
+    --popover-foreground: hsl(222.2, 84%, 4.9%);
+
+    --primary: hsl(174.88, 100%, 16.08%);
+    --primary-foreground: hsl(52, 25%, 88%);
+
+    --secondary: hsl(0, 0%, 0%);
+    --secondary-foreground: hsl(54, 20%, 80%);
+
+    --muted: hsl(210, 40%, 96.1%);
+    --muted-foreground: hsl(215.4, 16.3%, 46.9%);
+
+    --accent: hsl(325, 17.65%, 40%);
+    --accent-foreground: hsl(325, 17.65%, 40%);
+
+    --destructive: hsl(0, 84.2%, 60.2%);
+    --destructive-foreground: hsl(210, 40%, 98%);
+
+    --border: hsl(214.3, 31.8%, 91.4%);
+
+    --input: hsl(0, 0%, 95%);
+    --input-placeholder: hsl(0, 0%, 50%);
+    --input-foreground: hsl(0, 0%, 15%);
+
+    --ring: hsl(222.2, 84%, 4.9%);
+
+    --radius: 0.5rem;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+  }
+}
 
 @layer utilities {
+
   /* Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
     display: none;
@@ -13,16 +113,16 @@
   }
 
   .no-scrollbar {
-    -ms-overflow-style: none; /* IE and Edge */
-    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 
-  input:focus ~ label,
-  input:not(:placeholder-shown) ~ label {
+  input:focus~label,
+  input:not(:placeholder-shown)~label {
     @apply -translate-y-2 text-xxs-normal;
   }
 
-  input:focus ~ label {
+  input:focus~label {
     @apply left-0;
   }
 
